etc/iptables/rules.v4
# Generated by iptables-save v1.8.2 on Sun Apr 19 08:59:15 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -m comment --comment "allow loopback traffic lo" -j ACCEPT
-A INPUT -d 127.0.0.0/8 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m comment --comment "web server" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m comment --comment "secure web server" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 8080 -m comment --comment "kodi" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 8003 -m comment --comment "wifi geolocation find" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 1883 -m --comment "MQTT mosquitto" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "local ssh" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 55008 -m comment --comment "BLEA remote" -j ACCEPT
-A INPUT -p udp -m udp --sport 5353 -m comment --comment "mDNS" -j ACCEPT
-A INPUT -p udp -m udp --sport 67 --dport 68 -m comment --comment "mDNS" -j ACCEPT
-A INPUT -p udp -m udp --sport 68 --dport 67 -m comment --comment "mDNS" -j ACCEPT
-A INPUT -p udp -m udp --dport 3483 -m comment --comment "squeezebox" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3483 -m comment --comment "squeezebox" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p udp -m udp --dport 17784 -m comment --comment "squeezebox" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p udp -m udp --dport 17784 -m comment --comment "squeezebox" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p udp -m udp --dport 35622 -m comment --comment "Urbackup broadcasts (receiving)" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p udp -m udp --dport 35623 -m comment --comment "Urbackup Commands/Image backups" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p udp -m udp --dport 35621 -m comment --comment "Urbackup File backupss" -j ACCEPT
-A INPUT -p udp -m udp --dport 17500 -m comment --comment "dropbox lan" -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p igmp -m comment --comment "multidiffusion" -j ACCEPT
-A INPUT -p udp -m udp --dport 57621 -m comment --comment spotify -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 9090 -m comment --comment kodi -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -m comment --comment "allow all outbound traffic" -j ACCEPT
-A OUTPUT -p udp -m udp --dport 5353 -j ACCEPT
COMMIT
# Completed on Sun Apr 19 08:59:15 2020
# Generated by iptables-save v1.8.2 on Sun Apr 19 08:59:15 2020
*nat
:PREROUTING ACCEPT [71:8886]
:INPUT ACCEPT [64:7705]
:OUTPUT ACCEPT [85:5158]
:POSTROUTING ACCEPT [85:5158]
-A POSTROUTING -s 10.6.0.0/24 -o eth0 -m comment --comment wireguard-nat-rule -j MASQUERADE
COMMIT
# Completed on Sun Apr 19 08:59:15 2020
